--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^6.6.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "numeral": "^2.0.6",
     "react": "^16.9.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^21.0.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   },
   "scripts": {
