--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "eslint-utils": "1.4.1",
     "firebase": "^6.6.1",
+    "history": "^4.10.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "numeral": "^2.0.6",
